tests/test_data/CodeStructureSnippets/good/expr_good1.ifj21
require "ifj21"
function main()
    local vysl : number = 1 + 2 + 0.5 + 9
end
main()