tests/test_data/CodeStructureSnippets/bad/sem_err_4.2.ifj21
require "ifj21"
function main()
    local vysl : integer = 2.5
end
main()
